Revised styling for headlines, pull-quotes; fixed tooltip bug on mobile version of Reminiscence Bump chart

--- a/css/bump.css
+++ b/css/bump.css
@@ -22,80 +22,4 @@
     }
 
 
-.summary{
-font-family:Helvetica;
-font-weight:100;
-width:40%;
-}
 
-.memory-text{
-    font-size:1em;
-    padding:1%;
-}
-
-#computer-guy{
-    width:20%;
-    float:right;
-}
-
-
-.a {
-        fill: #d9d9d9;
-      }
-
-      .b {
-        opacity: 0.8;
-      }
-
-      .c {
-        fill: #aeabab;
-      }
-
-      .d {
-        fill: #ededed;
-      }
-
-      .e {
-        fill: #e1e0e0;
-      }
-
-      .f {
-        fill: #cac8c8;
-      }
-
-      .g {
-        fill: #d4d2d2;
-      }
-
-      .h {
-        fill: #dad8d8;
-      }
-
-      .i {
-        fill: #e5e4e4;
-      }
-
-      .j {
-        fill: #c2bfbf;
-      }
-
-      .k {
-        fill: #c9c7c7;
-      }
-
-      .l {
-        fill: #ececec;
-      }
-
-      .m, .n {
-        fill: none;
-      }
-
-      .m {
-        stroke: #000;
-        stroke-miterlimit: 10;
-      }
-
-      .o {
-        fill: #6e6c6c;
-      }
